Fix text overflow in lists

--- a/css/main.css
+++ b/css/main.css
@@ -182,11 +182,8 @@ ul {
 
 li {
 	padding: 0px;
-}
-
-li, li > div {
 	white-space: nowrap;
-	display: block;
+	display: inline;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
@@ -262,10 +259,6 @@ ul.hierarchy {
 	overflow-y: auto;
 }
 
-ul.sub {
-	overflow-y: auto;
-}
-
 ul.hierarchy > li > div,
 ul.sub > li > div {
 	padding-top: 5px;
@@ -286,6 +279,11 @@ ul.hierarchy > li {
 	font-weight: bold;
 }
 
+ul.hierarchy li div {
+	overflow: hidden;
+	text-overflow: ellipsis;	
+}
+
 ul.hierarchy > li > div:hover a {
 	color: #fb0;
 }
@@ -296,7 +294,6 @@ ul.hierarchy ul {
 
 ul.sub li {
 	font-weight: normal;
-	padding-left: 5px;
 }
 
 ul.sub li i {
